added data properties

--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -53,7 +53,7 @@
                                     <label for="description-id" class="p-3">Description</label>
                                 </div>
 
-                                <div class="row" id="bank-products-id">
+                                <div class="row w-100" id="bank-products-id">
                                     <div class="col-sm">
                                         <div class="form-floating mt-2">
                                             <select name="select-credit-card" id="select-credit-card-id" class="form-select">
@@ -133,15 +133,31 @@
                                     <label for="description-id" class="p-3">Description</label>
                                 </div>
 
-                                <div class="form-floating mt-2">
-                                    <select name="select-bank-account" id="e-select-bank-account-id" class="form-select">
-                                        <option value="none">...Select...</option>
-                                        {% for ba in bank_accounts %}
-                                        <option value="{{ ba.id }}">{{ ba.nick_name }}</option>                                        
-                                        {% endfor %}
-                                    </select>
-                                    <label for="e-select-bank-account-id" class="p-3">Bank Account</label>
+                                <div class="row w-100" id="bank-products-id">
+                                    <div class="col-sm">
+                                        <div class="form-floating mt-2">
+                                            <select name="select-credit-card" id="e-select-credit-card-id" class="form-select">
+                                                <option value="none">...Select...</option>
+                                                {% for cc in credit_cards %}
+                                                <option value="{{ cc.id }}">{{ cc.nick_name }}</option>
+                                                {% endfor %}
+                                            </select>
+                                            <label for="e-select-credit-card-id" class="p-3">Credit Card</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm">
+                                        <div class="form-floating mt-2">
+                                            <select name="select-bank-account" id="e-select-bank-account-id" class="form-select">
+                                                <option value="none">...Select...</option>
+                                                {% for ba in bank_accounts %}
+                                                <option value="{{ ba.id }}">{{ ba.nick_name }}</option>                                        
+                                                {% endfor %}
+                                            </select>
+                                            <label for="e-select-bank-account-id" class="p-3">Bank Account</label>
+                                        </div>
+                                    </div>
                                 </div>
+
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -245,6 +261,7 @@
                     <th scope="col">Status</th>
                     <th scope="col">Description</th>
                     <th scope="col">Is Cash</th>
+                    <th scope="col">Credit Card</th>
                     <th scope="col">Bank Account</th>
                     <th scope="col">Create at</th>
                     <th scope="col">Acctions</th>
@@ -273,6 +290,7 @@
                                 <span class="badge text-bg-secondary">NO</span>
                             {% endif %}
                         </td>
+                        <td>{{ loan.credit_card.nick_name if loan.credit_card else '-' }}</td>
                         <td>{{ loan.bank_account.nick_name if loan.bank_account else '-' }}</td>
                         <td>{{ loan.created_at | format_datetime("EEE, dd MMM yyyy hh:mm a") }}</td>
                         <td>
@@ -299,6 +317,7 @@
                                     data-description="{{ loan.description }}"
                                     data-person-name="{{ loan.person_name }}"
                                     data-bank-account-id="{{ loan.bank_account_id }}"
+                                    data-credit-card-id="{{ loan.credit_card_id }}"
                                 >
                                     <i class="bi bi-pen"></i>
                                 </button>
@@ -418,6 +437,7 @@
 
             const oldIsCash = button.getAttribute('data-is-cash').toLowerCase() === 'true';
             const oldBankAccountId = button.getAttribute('data-bank-account-id');
+            const oldCreditCardId = button.getAttribute('data-credit-card-id');
             const oldAmount = button.getAttribute('data-amount');
             const loanId = button.getAttribute('data-loan-id');
             const isActive = button.getAttribute('data-is-active').toLowerCase() === 'true';
@@ -429,8 +449,12 @@
             document.getElementById('e-is-active-id').checked = !isActive;
             document.getElementById('e-loan-id').value = loanId;
             document.getElementById('e-select-bank-account-id').value = oldBankAccountId; //If on the db its value it's Null flask will convert it into 'None' which the browser interprets it as String value in js
+            document.getElementById('e-select-credit-card-id').value = oldCreditCardId; //If on the db its value it's Null flask will convert it into 'None' which the browser interprets it as String value in js
             if(oldBankAccountId === 'None') {
                 document.getElementById('e-select-bank-account-id').value = 'none';
+            }
+            if(oldCreditCardId === 'None') {
+                document.getElementById('e-select-credit-card-id').value = 'none';
             }
             document.getElementById('e-person-name-id').value = personName;
             document.getElementById('e-description-id').value = description;
