--- a/app/templates/credit_cards/associated_records.html
+++ b/app/templates/credit_cards/associated_records.html
@@ -181,6 +181,56 @@
             </div>
         </div>
     </div>
+
+    <div class="my-3 border rounded-3">
+        <div class="rounded-top d-flex align-items-center justify-content-center p-2" style="height: 60px; background-color: #dba400;">
+            <div class="me-auto">
+                <h4 class="d-flex justify-content-center">Loans</h4>
+            </div>
+            <div class="w-100" style="max-width: 217px;">
+                <input type="text" name="filter-input-expense" id="filter-input-expense-id" class="form-control"
+                    placeholder="Search...">
+            </div>
+        </div>
+        <div id="loans-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
+            <table class="table table-borderless table-hover text-center" id="loans-table">
+                <thead class="sticky-top" >
+                    <tr class="table-warning">
+                        <th scope="col"># Id</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col">Is Cash</th>
+                        <th scope="col" class="text-start">Description</th>
+                        <th scope="col">Credit Card</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col" class="text-start">Category</th>
+                        <th scope="col">Create at</th>
+                    </tr>
+                </thead>
+                <tbody id="loans-table-body">
+                    {% for expense in credit_card.loans %}                
+                    <tr>
+                        <th scope="row">{{ expense.id }}</th>
+                        <td class="text-start">{{ format_amount(expense.amount) }}</td>
+                        <td>{{ 'YES' if expense.is_cash else 'NO' }}</td>
+                        <td class="text-start"> {{ expense.description or '-' }} </td>
+                        <td>{{ expense.credit_card.nick_name or '-' }}</td>
+                        <td>{{ expense.bank_account.nick_name }}</td>
+                        <td class="text-start">{{ expense.expense_category.name }}</td>
+                        <td>{{ expense.created_at | format_datetime("EEE, dd MMM yyyy hh:mm a") }}</td>
+                    </tr>
+                    {% endfor %}
+                    
+                </tbody>
+            </table>
+        </div>
+        <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
+            <div class="row text-center">
+                <p class="fs-6 fw-bold" id="total-amounts-loans-id">TOTAL: {{ total_amount(credit_card.loans) }}</p>
+                <p class="fs-6 fw-bold" id="total-count-loans-id">RECORDS: {{ credit_card.loans | length }}</p>
+            </div>
+        </div>
+    </div>
+
     <p class="d-none" id="associated-records-endpoint-id">{{ url_for('credit_card.associated_records_in_json', id=credit_card.id ) }}</p>
     <input type="hidden" name="" id="yearly-single-model-report-endpoint" value="{{ url_for('stats.yearly_single_model_report' ) }}">
     <input type="hidden" name="" id="get-yearly-total-per-association-info" value="{{ url_for('credit_card.get_yearly_total_per_association_info' ) }}">
